--- a/angular-udemy-app/src/app/server/server.component.html
+++ b/angular-udemy-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>{{ 'Server' }} with id: {{ serverID }} is {{getServerStatus()}}</p>
+<p class="server-style" [ngStyle]="{backgroundColor: getColor()}">{{ 'Server' }} with id: {{ serverID }} is {{serverStatus}}</p>
