--- a/angular-udemy-app/src/app/servers/servers.component.html
+++ b/angular-udemy-app/src/app/servers/servers.component.html
@@ -22,5 +22,4 @@
 <!--  <p>No server was created!</p>-->
 <!--</ng-template>-->
 <p *ngIf="serverCreated"> {{ getServerCreationStatus() }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers" [server]="server"></app-server>
