--- a/angular-udemy-app/src/app/components/servers/server/server-bar.component.html
+++ b/angular-udemy-app/src/app/components/servers/server/server-bar.component.html
@@ -5,8 +5,7 @@
 >
   {{ 'Server' }} named: {{ server.serverName }} with id: {{ server.id }} is {{ server.serverStatus }}
   <button
-    class="btn-primary"
-    (click)="deleteThis()"
+    (click)="removeBar()"
   >Delete</button>
 </p>
 
