--- a/angular-udemy-app/src/app/components/servers/server/server-bar.component.css
+++ b/angular-udemy-app/src/app/components/servers/server/server-bar.component.css
@@ -8,7 +8,7 @@
   border-color: lightgrey;
   border-width: 5px;
   border-radius: 50px;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
