--- a/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>NAME</h1>
   </div>
 </div>
 <div class="row">
@@ -27,7 +27,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    DESC
   </div>
 </div>
 <div class="row">
