--- a/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,11 @@
-<p>recipe-detail works!</p>\
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img img-responsive">
+    <img src="{{recipeDetail.imagePath}}" alt="" class="img img-responsive">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>NAME</h1>
+    <h1>{{recipeDetail.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -27,7 +26,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    DESC
+    {{recipeDetail.description}}
   </div>
 </div>
 <div class="row">
