--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,29 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
+        <div
+          *ngIf="onlyOdd">
         <li
-          class="list-group-item">
-        </li>
+            class="list-group-item"
+            [ngClass]="{odd: oddNumber%2!==0}"
+            [ngStyle]="{backgroundColor: oddNumber%2!==0 ? 'yellow' : 'transparent'}"
+            *ngFor="let oddNumber of oddNumbers">
+            {{oddNumber}}
+          </li>
+        </div>
+        <div
+          *ngIf="!onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{odd: evenNumber%2!==0}"
+            [ngStyle]="{backgroundColor: evenNumber%2!==0 ? 'yellow' : 'transparent'}"
+            *ngFor="let evenNumber of evenNumbers">
+            {{evenNumber}}
+          </li>
+        </div>
       </ul>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
+      <p appBasicHighlight>Style me with basic directive</p>
+      <p appBetterHighlight>Style me with better directive</p>
     </div>
   </div>
 </div>
