--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,18 @@
             {{oddNumber}}
           </li>
         </div>
-        <div
-          *ngIf="!onlyOdd">
+<!--        <ng-template [ngIf]="!onlyOdd">-->
+<!--          <div>-->
+<!--            <li-->
+<!--              class="list-group-item"-->
+<!--              [ngClass]="{odd: evenNumber%2!==0}"-->
+<!--              [ngStyle]="{backgroundColor: evenNumber%2!==0 ? 'yellow' : 'transparent'}"-->
+<!--              *ngFor="let evenNumber of evenNumbers">-->
+<!--              {{evenNumber}}-->
+<!--            </li>-->
+<!--          </div>-->
+<!--        </ng-template>-->
+        <div *appUnless="onlyOdd">
           <li
             class="list-group-item"
             [ngClass]="{odd: evenNumber%2!==0}"
@@ -28,7 +38,13 @@
         </div>
       </ul>
       <p appBasicHighlight>Style me with basic directive</p>
-      <p appBetterHighlight>Style me with better directive</p>
+      <p appBetterHighlight [defaultColor]="'pink'"  [highlightColor] = "'purple'">Style me with better directive</p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is Default</p>
+      </div>
     </div>
   </div>
 </div>
