--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -1,28 +1,60 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="email">email</label>
-          <input
-            type="text"
-            id="email"
-            class="form-control">
+      <form [formGroup]="signupFrom" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              class="form-control"
+              formControlName="username">
+          </div>
+          <span *ngIf="!signupFrom.get('userData.username').valid && signupFrom.get('userData.username').touched"
+                class="help-block">
+            <span *ngIf="signupFrom.get('userData.username').errors['nameIsForbidden']">
+              This name is invalid!
+            </span>
+            <span *ngIf="signupFrom.get('userData.username').errors['required']">
+              This field is required!
+            </span>
+          </span>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input
+              type="text"
+              id="email"
+              class="form-control"
+              formControlName="email">
+          </div>
+          <span *ngIf="!signupFrom.get('userData.email').valid && !signupFrom.get('userData.email').errors['emailIsForbidden'] && signupFrom.get('userData.email').touched"
+                class="help-block">
+            This field is required!
+          </span>
+<!--          <span *ngIf="signupFrom.get('userData.email').errors['emailIsForbidden']">This email is forbidden!</span>-->
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
               type="radio"
+              formControlName="gender"
               [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your hobbies</h4>
+          <button
+            class="btn btn btn-default"
+            (click)="onAddHobby()">Add Hobby
+          </button>
+          <div
+            class="form-group"
+            *ngFor="let hobbyControl of getControls(); let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
+        <span *ngIf="!signupFrom.valid && signupFrom.touched" class="help-block">Please fill form correctly!</span>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
