--- a/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
       <ul class="dropdown-menu" >
         <li><a (click)="onMoveClick()" style="cursor: pointer">To Shopping List</a></li>
         <li><a (click)="onEdit()" style="cursor: pointer">Edit recipe</a></li>
-        <li><a style="cursor: pointer">Delete recipe</a></li>
+        <li><a (click)="onDelete()" style="cursor: pointer">Delete recipe</a></li>
       </ul>
     </div>
   </div>
