--- a/project-app/src/app/shopping-list/shopping-list.component.html
+++ b/project-app/src/app/shopping-list/shopping-list.component.html
@@ -7,7 +7,7 @@
         [ngStyle]="{backgroundColor: (shoppingListState | async).editedIngredientIndex ==i ? 'lightblue' : 'transparent'}"
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingredient of (ingredients | async).ingredients ; let i = index"
+        *ngFor="let ingredient of (shoppingListState | async).ingredients ; let i = index"
         (click)="onEditItem(i)">
         {{ingredient.name}} ({{ingredient.amount}})
       </a>
